# ai-agents-in-action-playground

./: README.md  agent_config.py  main.py  mise.toml  pyproject.toml
ch02/: 01_first_agent.py  03_output_type_basic.py  08_agent_with_tools.py
ch04/: 01_a2a.py  02_a2a_handoffs.py
