[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-agents-in-action-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai-agents>=0.17.6",
    "pydantic>=2.13.4",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
